new TCI case study

--- a/index.html
+++ b/index.html
@@ -22,15 +22,14 @@
     </div>
     <h3>fossora <span class="client">Squarespace x Björk</span></h3>
 </section>
-<!--------------------------Acuity----------------------->
-<section class="col123 new-listing" style="align-self:end" data-link="acuity.html">
+
+ <!--------------------------Community----------------->
+ <section class="col123 new-listing" data-link="community.html">
     <div class="diptych">
-        <div class="video-wrapper">
-            <video muted autoplay loop src="acuity/ooh-optimized.mp4" type="video/mp4"></video>
-        </div>
-        <img class="not-mobile" src="acuity/Acuity-mockup-screen-cooler.png">
+        <img class="lozad" data-src="community/contents.jpg">
+        <img class="lozad not-mobile" data-src="community/32-33.jpg">
     </div>
-    <h3>Identity <span class="client">Acuity Scheduling</span></h3>
+<h3>A Community is a Garden <span class="client">The Guggenheim</span></h3>
 </section>
 <!--------------------------VennDiagramm----------------------->
 <section class="col123 new-listing" data-link="venndiagramm.html">
@@ -50,9 +49,8 @@
     </div>
     <h3>Money Has No Smell <span class="client">CUE Art Foundation</span></h3>
 </section>
-
 <!--------------------------Tetragrammaton----------------------->
- <section class="col123 new-listing" data-link="tetragrammaton.html">
+<section class="col123 new-listing" data-link="tetragrammaton.html">
     <div class="diptych">
         <img class="lozad" data-src="tetragrammaton/Inscreen_Laptop.jpg">
         <div class="video-wrapper not-mobile">
@@ -61,15 +59,6 @@
     </div>
     <h3>Tetragrammaton <span class="client">Squarespace x Rick Rubin</span></h3>
 </section>
- <!--------------------------Community----------------->
- <section class="col123 new-listing" data-link="community.html">
-    <div class="diptych">
-        <img class="lozad" data-src="community/contents.jpg">
-        <img class="lozad not-mobile" data-src="community/32-33.jpg">
-    </div>
-<h3>A Community is a Garden <span class="client">The Guggenheim</span></h3>
-</section>
-
  <!--------------------------The Baffler----------------------->
  <section class="col123 new-listing" data-link="spaceopera.html">
     <div class="diptych">
@@ -78,7 +67,26 @@
     </div>
     <h3>Illustration <span class="client">The Baffler</span></h3>
 </section>
-
+ <!--------------------------TCI----------------------->
+ <section class="col123 new-listing" data-link="tci.html">
+    <div class="diptych">
+        <div class="video-wrapper">
+            <video muted autoplay loop src="tci/2024 Site Documentation-4k.mp4" type="video/mp4"></video>
+        </div>
+        <img class="lozad not-mobile" data-src="tci/TCI_stickers.jpg">
+    </div>
+    <h3>Illustration <span class="client">The Baffler</span></h3>
+</section>
+<!--------------------------Acuity----------------------->
+<section class="col123 new-listing" style="align-self:end" data-link="acuity.html">
+    <div class="diptych">
+        <div class="video-wrapper">
+            <video muted autoplay loop src="acuity/ooh-optimized.mp4" type="video/mp4"></video>
+        </div>
+        <img class="not-mobile" src="acuity/Acuity-mockup-screen-cooler.png">
+    </div>
+    <h3>Identity <span class="client">Acuity Scheduling</span></h3>
+</section>
  <!--------------------------NYT----------------------->
  <section class="col123 new-listing" data-link="nytimes.html">
     <div class="diptych">
@@ -87,8 +95,7 @@
     </div>
     <h3>AD and Design <span class="client">The New York Times</span></h3>
 </section>
-
- <!--------------------------Joshua Leifer----------------------->
+ <!-------------------------Joshua Leifer----------------------->
  <section class="col123 new-listing" style="align-self:end" data-link="joshualeifer.html">
     <div class="diptych">
         <div class="video-wrapper">
