--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         </div>
         <img class="lozad not-mobile" data-src="tci/TCI_stickers.jpg">
     </div>
-    <h3>Illustration <span class="client">The Baffler</span></h3>
+    <h3>Design & Special Projects <span class="client">The Creative Independent</span></h3>
 </section>
 <!--------------------------Acuity----------------------->
 <section class="col123 new-listing" style="align-self:end" data-link="acuity.html">
