--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
 <section id=navcontainer></section>
 
 <section id="about">
-    <h2 class="col23">Mikki Janower is a multidisciplinary designer, art director, and researcher. She maintains an independent practice across media, music, and the arts, and co-operates print and art collective <a href="https://venndiagramm.space" target="_blank">Venn Diagramm</a>. She has previously worked as a brand designer at Squarespace and as a print designer at The New York Times.</h2>
+    <h2 class="col23">Mikki Janower is a designer, art director, and researcher. She maintains an independent practice across media, music, and the arts, and co-operates print and art collective <a href="https://venndiagramm.space" target="_blank">Venn Diagramm</a>. She has previously worked as a brand designer at Squarespace and as a print designer at The New York Times.</h2>
      <div class="cv col2">
         <p class="item-title">Awards</p>
         <a href="" target="_blank">Gold Cube, Art Director's Club, 2023</a>
