--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
         <div class="video-wrapper"><video playsinline muted autoplay loop class="lozad" data-src="archive/leren-homepage-optimized.mp4" type="video/mp4"></video></div>
         <div class="video-wrapper"><video playsinline muted autoplay loop class="lozad not-mobile" data-src="archive/game-over-optimized.mp4" type="video/mp4"></video></div> 
     </div>
-    <h3>Archive & Experiments <span class="client">Various / Personal</span></h3>
+    <h3>Archive & Experiments</h3>
 </section>
  <!-----------------------Endnotes----------------------->
  <section class="col12">
