--- a/archive.html
+++ b/archive.html
@@ -44,7 +44,7 @@
 
 <!---------------------Transient Grounds----------------------->
 <img class="col123" src="archive/transientgrounds.jpg">
-<h2 class="col123">Exhibition Collateral for <a href="https://www.narsfoundation.org/2021_exhibitions/transient-grounds" target="_blank">Transient Grounds </a><span class="client">ACOMPI x NARS Foundation, 2022</span></h2>
+<h2 class="col123">Identity for <a href="https://www.narsfoundation.org/2021_exhibitions/transient-grounds" target="_blank">Transient Grounds </a><span class="client">ACOMPI x NARS Foundation, 2022</span></h2>
 
 <!---------------------delineator----------------------->
 <div class="video-wrapper col123">
