--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <img class="lozad" data-src="samplerdisplay/homepage-thumbnail-1.png">
         <img class="lozad not-mobile" data-src="samplerdisplay//homepage-thumbnail-3.png">
     </div>
-    <h3>Type Design <span class="client">Sampler Typeface</span></h3>
+    <h3>Sampler Typeface <span class="client"></span></h3>
 </section>
 <!--------------------------Acuity----------------------->
 <section class="col123 new-listing" style="align-self:end" data-link="acuity.html">
@@ -147,7 +147,7 @@
 </section>
  <!-----------------------Endnotes----------------------->
  <section class="col12">
-    <p>Designed & coded by Mikki Janower. Last updated June 2025. <span class="client">More work available upon request.</span></p>
+    <p style="max-width:850px">More work available upon request. <br><span class="client">Designed & coded by Mikki Janower. Last updated June 2025.</span></p>
 </section>
 
 </section>
