--- a/archive.html
+++ b/archive.html
@@ -52,6 +52,9 @@
 </div>
 <h2 class="col123"><a href="https://mikki-janower.github.io/Delineator/" target="_blank">Delineator,</a> an open-source pixel art tool <span class="client">2023</span></h2>
 
+<!----------------cyberotica--------------------------->
+<img class="col123" src="cyberotica/feature-02.jpg">
+<h2 class="col123">Cyberotica, an anthology of techno-sexual art <span class="client">2020</span></h2>
 <!-----------------------lightbox---------------------->
 <div id="lightbox" style="display:none;">
     <img id="lightbox-img" style="display:none;">
