--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
 <section id=navcontainer></section>
 
 <section id="about">
-    <h2 class="col23">Mikki Janower is a designer, art director, and researcher. She maintains an independent practice across media, music, and the arts, and co-operates print and art collective <a href="https://venndiagramm.space" target="_blank">Venn Diagramm</a>. She has previously worked as a brand designer at Squarespace and as a print designer at The New York Times.</h2>
+    <h2 class="col23">Mikki Janower is a freelance designer, art director, and creative generalist. She's been a brand designer at <a href="https://www.squarespace.com/" target="_blank">Squarespace</a>, a print designer at <a href="http://nytimes.com" target="_blank">The New York Times</a>, and a practicum researcher at <a href="https://www.guggenheim.org/" target="_blank">the Guggenheim Museum</a>. She co-operates <a href="https://venndiagramm.space" target="_blank">Venn Diagramm Press</a>.</h2>
      <div class="cv col2">
         <p class="item-title">Awards</p>
         <a href="" target="_blank">Gold Cube, Art Director's Club, 2023</a>
@@ -38,7 +38,7 @@
         <a href="" target="_blank"><i>RCA2025</i>, Royal College of Art, 2025</a>
 
         <p class="item-title">Education</p>
-        <a href="https://www.rca.ac.uk/" target="_blank">MA in Visual Communications, Royal College of Art</a>
+        <a href="https://www.rca.ac.uk/" target="_blank">MA in Visual Communications, Royal College of Art (expected September 2025)</a>
         <a href="https://samfoxschool.washu.edu/" target="_blank">BFA in Communications Design, Sam Fox School of Design & Visual Arts</a>
     </div>
         <div class="cv col3">
@@ -55,13 +55,21 @@
             <a href="https://thecreativeindependent.com" target="_blank">The Creative Independent</a>
             <a href="https://acompi.nyc" target="_blank">ACOMPI</a>
 
-            <p class="item-title">Services</p>
+            <p class="item-title">Select Skills</p>
             <span>Art Direction</span>
+            <span>Publication Design</span>
             <span>Typography</span>
             <span>Creative Coding</span>
             <span>Identity Design</span>
-            <span>Publication Design</span>
             <span>Web Design</span>
+
+            <p class="item-title">Current Interests</p>
+            <span>Metal Fabrication</span>
+            <span>CLI Programming</span>
+            <span>Hand-lettering</span>
+            <span>DaVinci Resolve</span>
+
+
 
 
     </div>
