updated file names

--- a/sampler.html
+++ b/sampler.html
@@ -173,6 +173,7 @@ input:focus::-ms-fill-upper {
   width:24px;
   height:6px;
   background-color:#B9B5B5 !important;
+  box-shadow:none !important;
   border-radius:8px;
 }
 input::-ms-track {
