--- a/tategames2.html
+++ b/tategames2.html
@@ -23,7 +23,7 @@
        
         <img class="col23" src="tategames2/DSC07484.jpg">
          <div class="diptych col23">
-            <img class="" src="tategames2/_DSC2826.jpg">
+            <img class="" src="tategames2/DSC2826.jpg">
             <img class="" src="tategames2/DSC07435.jpg">
         </div>
         <img class="col12" src="tategames2/IMG_0122.jpg">
@@ -31,9 +31,9 @@
             <video muted autoplay loop src="tategames2/Timeline 1.webm" type="video/mp4"></video>
         </div>
         <div class="col2 caption">I was drawn the tensions that arose around crowdsourcing art. What makes crowdsourcing in a co-creative context different from using a micro-labor platform like Mechanical Turk? What makes it different from using AI? In spite of these differences, was I in some way perpetuating the cycle of unpaid labor in which I participated?</div>
-            <img class="col3 lozad" data-src="tategames2/_DSC2730.jpg">
-        <img class="col23 lozad" data-src="tategames2/_DSC2835.jpg">
-        <img class="col23 lozad" data-src="tategames2/_DSC2833.jpg">
+            <img class="col3 lozad" data-src="tategames2/DSC2730.jpg">
+        <img class="col23 lozad" data-src="tategames2/DSC2835.jpg">
+        <img class="col23 lozad" data-src="tategames2/DSC2833.jpg">
     <!--collateral scans-->
         <img class="spaced lozad col12" data-src="tategames2/TateGames2-medframe.jpeg">
          <img class="lozad col1" data-src="tategames2/TateGames2-smallframe.jpeg">
