--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
 <!--------------------------VennDiagramm----------------------->
 <section class="col123 new-listing" data-link="venndiagramm.html">
     <div class="diptych">
-        <img class="lozad" data-src="venndiagramm/Cryptid/Cryptids_1920x1280 4.jpg">
-        <img class="lozad not-mobile" data-src="venndiagramm/FlimForum-Sidebyside.jpg">
+        <img class="lozad" data-src="venndiagramm/FlimForum-Sidebyside.jpg">
+        <img class="lozad not-mobile" data-src="venndiagramm/Cryptid/Cryptids_1920x1280 4.jpg">
     </div>
     <h3>Publication Design <span class="client">Venn Diagramm</span></h3>
 </section>
