--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
  <!--------------------------Tate Games 2----------------------->
  <section class="col123 new-listing" data-link="tategames2.html">
     <div class="diptych">
-        <img class="lozad" data-src="tategames2/thumbnail.jpg">
+        <img class="" src="tategames2/thumbnail.jpg">
         <div class="video-wrapper not-mobile">
-            <video class="lozad" muted autoplay loop data-src="tategames2/Timeline 1.webm" type="video/webm"></video>
+            <video class="" muted autoplay loop src="tategames2/Timeline 1.webm" type="video/webm"></video>
         </div>
     </div>
     <h3>Tate Games 2 <span class="client">The Tate Britain Archive</span></h3>
@@ -39,7 +39,7 @@
         <div class="video-wrapper">
             <video muted autoplay loop src="tci/2024 Site Documentation-4k.mp4" type="video/mp4"></video>
         </div>
-        <img class="lozad not-mobile" data-src="tci/TCI_stickers.jpg">
+        <img class="not-mobile" src="tci/TCI_stickers.jpg">
     </div>
     <h3>Design & Special Projects <span class="client">The Creative Independent</span></h3>
 </section>
@@ -73,9 +73,9 @@
 <section class="col123 new-listing" style="align-self:end" data-link="acuity.html">
     <div class="diptych">
         <div class="video-wrapper">
-            <video muted autoplay loop src="acuity/ooh-optimized.mp4" type="video/mp4"></video>
+            <video class="lozad" muted autoplay loop data-src="acuity/ooh-optimized.mp4" type="video/mp4"></video>
         </div>
-        <img class="not-mobile" src="acuity/Acuity-mockup-screen-cooler.png">
+        <img class="lozad not-mobile" data-src="acuity/Acuity-mockup-screen-cooler.png">
     </div>
     <h3>Identity <span class="client">Acuity Scheduling</span></h3>
 </section>
