--- a/archive.html
+++ b/archive.html
@@ -17,7 +17,7 @@
 <!--------------------------insert project information below this line----------------------->
         <div class="description">
             <h2>Archive & Experiments<br><span class="client">Various Projects</span></h2>
-                <p>A series of past projects, personal pursuits, and outtakes. More information on any work shown here is available upon request.</p>
+                <p>Select side quests, archived projects, and outtakes. More information on this work is available upon request.</p>
         </div>
 
 <!------------------------mario void----------------------->
@@ -26,6 +26,18 @@
 </div>
 <h2 class="col123"><a href="https://mikki-janower.github.io/supermariovoid/" target="_blank">Super Mario Void, </a>a nihilistic minigame <span class="client">2019</span></h2>
 
+<!------------------------Le Ren / Delineator----------------------->
+        
+<div class="col123 diptych">
+    <div>
+        <div class="video-wrapper"><video muted autoplay loop src="archive/leren-homepage-optimized.mp4" type="video/mp4"></video></div>
+        <h2 class="">Site and wordmark <span class="client">Le Ren, 2022</span></h2>
+    </div>
+    <div>
+        <img class="lozad" data-src="archive/Mikki_Delineator 7.jpg">
+        <h2>Delineator, an open-source pixel art tool <span class="client">2023</span></h2>
+    </div>
+</div>
 <!-----------------------reconna n reflections---------------------------->
 <div class="col123 diptych">
     <div><img class="col23" src="archive/reconna-purplebg.png">
@@ -36,31 +48,28 @@
     </div>
 </div>
 
-<!------------------------Le Ren----------------------->
-        <div class="video-wrapper col123">
-            <video muted autoplay loop src="archive/leren-homepage-optimized.mp4" type="video/mp4"></video>
-        </div>
-        <h2 class="col123">Site and wiordmark <span class="client">Le Ren, 2022</span></h2>
-
-<!---------------------Transient Grounds----------------------->
-<img class="col123" src="archive/transientgrounds.jpg">
-<h2 class="col123">Identity for <a href="https://www.narsfoundation.org/2021_exhibitions/transient-grounds" target="_blank">Transient Grounds </a><span class="client">ACOMPI x NARS Foundation, 2022</span></h2>
-
-<!---------------------delineator----------------------->
-<div class="video-wrapper col123">
-    <video muted autoplay loop src="delineator/delineator-optimized.mp4" type="video/mp4"></video>
+<!---------------------Transient Grounds n cyberotica----------------------->
+<div class="col123 diptych">
+    <div>
+        <img class="lozad" data-src="archive/transientgrounds.jpg">
+        <h2 class="">Identity for <a href="https://www.narsfoundation.org/2021_exhibitions/transient-grounds" target="_blank">Transient Grounds </a><span class="client">NARS Foundation, 2022</span></h2>
+    </div>
+    <div>
+        <img class="lozad" data-src="zz old/cyberotica/jeong 1920.jpg">
+        <h2 class="">Cyberotica, an anthology of techno-sexual art <span class="client">2020</span></h2>
+    </div>
 </div>
-<h2 class="col123"><a href="https://mikki-janower.github.io/Delineator/" target="_blank">Delineator,</a> an open-source pixel art tool <span class="client">2023</span></h2>
 
-<!----------------cyberotica--------------------------->
-<img class="col123" src="cyberotica/feature-02.jpg">
-<h2 class="col123">Cyberotica, an anthology of techno-sexual art <span class="client">2020</span></h2>
 <!-----------------------lightbox---------------------->
-<div id="lightbox" style="display:none;">
-    <img id="lightbox-img" style="display:none;">
-    <video id="lightbox-video" autoplay loop style="display:none;">
-        <source id="lightbox-source" src="">
+<div id="lightbox" style="display: none;">
+  <div class="lightbox-overlay"></div>
+  <div class="lightbox-content">
+    <img id="lightbox-img" style="display: none;" />
+    <video id="lightbox-video" muted playsinline autoplay loop style="display: none;">
+      <source id="lightbox-video-source" src="" />
     </video>
+    <iframe id="lightbox-iframe" style="display: none;" frameborder="0" allowfullscreen></iframe>
+  </div>
 </div>
        
     <div id="projfooter"></div>
