--- a/index.html
+++ b/index.html
@@ -131,7 +131,8 @@
  <!-----------------------Experiments----------------------->
  <section class="col123 new-listing" style="align-self:end" data-link="archive.html">
     <div class="diptych">
-        <div class="video-wrapper"><video playsinline muted autoplay loop class="lozad" data-src="archive/leren-homepage-optimized.mp4" type="video/mp4"></video></div>
+       <!-- <div class="video-wrapper"><video playsinline muted autoplay loop class="lozad" data-src="archive/leren-homepage-optimized.mp4" type="video/mp4"></video></div>-->
+        <img class="lozad" data-src="archive/Mikki_Delineator 7.jpg">
         <div class="video-wrapper"><video playsinline muted autoplay loop class="lozad not-mobile" data-src="archive/game-over-optimized.mp4" type="video/mp4"></video></div> 
     </div>
     <h3>Archive & Experiments</h3>
