--- a/fossora.html
+++ b/fossora.html
@@ -31,7 +31,7 @@
         <!----------------------Ancestress---------------------------------->
     <div class="subhead col12">b2. ancestress</div>
     <div class="video-wrapper col12">
-        <video muted autoplay loop>
+        <video muted playsinline autoplay loop>
             <source src="fossora/ancestress-insitu-3.mp4" type="video/mp4">
         </video>
     </div>
@@ -46,7 +46,7 @@
         <div class="subhead col12">a2. ovule</div>
             <img class="col123" src="fossora/Mikki_Ovule 8.jpg">
             <div class="video-wrapper col123">
-                <video muted autoplay loop>
+                <video muted playsinline autoplay loop>
                     <source src="fossora/Mikki_Ovule-insitu-2.webm">
                     <source src="fossora/Mikki_Ovule-insitu-2.mp4" type="video/mp4">
                 </video>
@@ -62,7 +62,7 @@
         <img class="lozad col1" data-src="fossora/Mikki_Ovule 5.jpg">
         <div class="caption col1">Featuring stills and footage from ovule, directed by Nick Knight and costumed by Alessandro Michele for Gucci.</div>
         <div class="video-wrapper col23">
-            <video muted autoplay loop class="lozad" data-src="fossora/Mikki_Ovule-insitu-1.mp4" type="video/mp4"></video>
+            <video muted playsinline autoplay loop class="lozad" data-src="fossora/Mikki_Ovule-insitu-1.mp4" type="video/mp4"></video>
         </div>
             <img class="col123" src="fossora/Mikki_Ovule 3.jpg"> 
     <!----------------------------Atopos--------------------------------->
@@ -71,28 +71,28 @@
             <div class="caption col3" style="align-self:end">Featuring stills and footage from atopos, directed by Vidar Logi and costumed by Burberry.</div>
             <img class="lozad col3" style="align-self:end" data-src="fossora/Mikki_Atopos 2.jpg">
             <div class="video-wrapper col23">
-                <video muted autoplay loop class="lozad" data-src="fossora/bjork-in-position.mp4" type="video/mp4"></video>
+                <video muted autoplay playsinline loop class="lozad" data-src="fossora/bjork-in-position.mp4" type="video/mp4"></video>
             </div>
     <!------------------------------Sorrowful Soil------------------------------------->
     <div class="subhead col1">b4. sorrowful soil </div>
     <div class="caption col2">Featuring stills and footage from sorrowful soil, directed by Vidar Logi.</div>
     <img class="lozad col3" data-src="fossora/Mikki_SorrowfulSoil 1.jpg">
     <div class="video-wrapper col123">
-       <video muted autoplay loop class="lozad" data-src="fossora/Mikki_SorrowfulSoil.mp4" type="video/mp4"></video>
+       <video muted playsinline autoplay loop class="lozad" data-src="fossora/Mikki_SorrowfulSoil.mp4" type="video/mp4"></video>
     </div>
 
        
   <!-----------------------lightbox---------------------->
-<!-- Lightbox container -->
-<div id="lightbox" style="display:none;">
-    <span class="close">&times;</span>
-    <img id="lightbox-img" style="display:none;" />
-    <video id="lightbox-video" autoplay mute loop style="display:none;">
-        <source id="lightbox-source" src="" />
+<div id="lightbox" style="display: none;">
+  <div class="lightbox-overlay"></div>
+  <div class="lightbox-content">
+    <img id="lightbox-img" style="display: none;" />
+    <video id="lightbox-video" muted playsinline autoplay loop style="display: none;">
+      <source id="lightbox-video-source" src="" />
     </video>
+    <iframe id="lightbox-iframe" style="display: none;" frameborder="0" allowfullscreen></iframe>
+  </div>
 </div>
-       
-
     <div id="projfooter"></div>
 </section>
 <!--------------------------end of project-specific code------------------------->
