--- a/about.html
+++ b/about.html
@@ -31,7 +31,7 @@
         <p class="item-title">Writing</p>
         <a href="https://thecreativeindependent.com/people/curatorial-duo-acompi-on-the-power-of-building-something-with-friends/" target="_blank">ACOMPI on the Power of Building Something with Friends, 2022</a>
         <a href="https://thecreativeindependent.com/people/worker-owned-studio-partners-and-partners-on-building-tools-for-better-worlds/" target="_blank">Partner & Partners on Building Tools for Better Worlds, 2021</span>
-        <a href="bit.ly/CommunityGardenToolkit"target="_blank">A Community is a Garden, 2020</a>
+        <a href="bit.ly/CommunityGardenToolkit"target="_blank"><i>A Community is a Garden</i>, 2020</a>
 
         <p class="item-title">Exhibitions</p>
         <a href="" target="_blank"><i>Please Use Caution! Collaborative Ventures are Always Fraught with Problems!</i>, Tate Britain, 2025</a>
