--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="diptych">
         <img src="fossora/Mikki_Ovule 8.jpg">
         <div class="video-wrapper not-mobile">
-            <video muted autoplay loop src="fossora/Mikki_SorrowfulSoil.mp4" type="video/mp4"></video>
+            <video muted playsinline autoplay loop src="fossora/Mikki_SorrowfulSoil.mp4" type="video/mp4"></video>
         </div>
     </div>
     <h3>fossora <span class="client">Squarespace x Björk</span></h3>
@@ -28,7 +28,7 @@
     <div class="diptych">
         <img class="" src="tategames2/thumbnail.jpg">
         <div class="video-wrapper not-mobile">
-            <video class="" muted autoplay loop src="tategames2/Timeline 1.webm" type="video/webm"></video>
+            <video class="" muted playsinline autoplay loop src="tategames2/Timeline 1.webm" type="video/webm"></video>
         </div>
     </div>
     <h3>Tate Games 2 <span class="client">The Tate Britain Archive</span></h3>
@@ -37,7 +37,7 @@
  <section class="col123 new-listing" data-link="tci.html">
     <div class="diptych">
         <div class="video-wrapper">
-            <video muted autoplay loop src="tci/2024 Site Documentation-4k.mp4" type="video/mp4"></video>
+            <video muted autoplay playsinline loop src="tci/2024 Site Documentation-4k.mp4" type="video/mp4"></video>
         </div>
         <img class="not-mobile" src="tci/TCI_stickers.jpg">
     </div>
@@ -64,7 +64,7 @@
     <div class="diptych">
         <img class="lozad" data-src="tetragrammaton/Inscreen_Laptop.jpg">
         <div class="video-wrapper not-mobile">
-            <video muted autoplay loop class="lozad" data-src="tetragrammaton/tetragrammaton-logo-screen.mp4" type="video/mp4"></video>
+            <video muted playsinline autoplay loop class="lozad" data-src="tetragrammaton/tetragrammaton-logo-screen.mp4" type="video/mp4"></video>
         </div>
     </div>
     <h3>Tetragrammaton <span class="client">Squarespace x Rick Rubin</span></h3>
@@ -73,7 +73,7 @@
 <section class="col123 new-listing" style="align-self:end" data-link="acuity.html">
     <div class="diptych">
         <div class="video-wrapper">
-            <video class="lozad" muted autoplay loop data-src="acuity/ooh-optimized.mp4" type="video/mp4"></video>
+            <video class="lozad" muted playsinline autoplay loop data-src="acuity/ooh-optimized.mp4" type="video/mp4"></video>
         </div>
         <img class="lozad not-mobile" data-src="acuity/Acuity-mockup-screen-cooler.png">
     </div>
