--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
     <div class="diptych">
         <img class="lozad" data-src="mhns/Mikki_MHNS 1.jpg">
         <div class="video-wrapper not-mobile">
-            <video class="lozad" muted autoplay loop data-src="mhns/mhns-flipbook.mp4" type="video/mp4"></video>
+            <video class="lozad" muted autoplay playsinline loop data-src="mhns/mhns-flipbook.mp4" type="video/mp4"></video>
         </div>
     </div>
     <h3>Money Has No Smell <span class="client">CUE Art Foundation</span></h3>
