replace lost file

--- a/tategames2.html
+++ b/tategames2.html
@@ -33,7 +33,7 @@
         <div class="col2 caption">I was drawn the tensions that arose around crowdsourcing art. What makes crowdsourcing in a co-creative context different from using a micro-labor platform like Mechanical Turk? What makes it different from using AI? In spite of these differences, was I in some way perpetuating the cycle of unpaid labor in which I participated?</div>
         <img class="col3 lozad" data-src="tategames2/DSC2730.jpg">
         <img class="col23 lozad" data-src="tategames2/DSC2835.jpg">
-        <img class="col23 lozad" data-src="tategames2/DSC2833.jpg">
+        <img class="col23 lozad" data-src="tategames2/DSC2834.jpeg">
     <!--collateral scans-->
         <img class="spaced lozad col12" data-src="tategames2/TateGames2-medframe.jpeg">
          <img class="lozad col1" data-src="tategames2/TateGames2-smallframe.jpeg">
