--- a/archive.html
+++ b/archive.html
@@ -20,39 +20,38 @@
                 <p>Select side quests, archived projects, and outtakes. More information on this work is available upon request.</p>
         </div>
 
-<!------------------------mario void----------------------->
+<!--------------Delineator--------------------------------->
 <div class="video-wrapper col123">
-    <video muted autoplay loop src="archive/game-over-optimized.mp4" type="video/mp4"></video>
+    <video muted playsinline autoplay loop src="archive/Delineator-a.mp4" type="video/mp4"></video>
 </div>
-<h2 class="col123"><a href="https://mikki-janower.github.io/supermariovoid/" target="_blank">Super Mario Void, </a>a nihilistic minigame <span class="client">2019</span></h2>
-
-<!------------------------Le Ren / Delineator----------------------->
+<h2 class="col123"><a href="https://mikki-janower.github.io/Delineator/" target="_blank">Delineator, </a>an open-source pixel art tool <span class="client">2023</span></h2>
+<!------------------------Le Ren / mariovoid----------------------->
         
 <div class="col123 diptych">
     <div>
-        <div class="video-wrapper"><video muted autoplay loop src="archive/leren-homepage-optimized.mp4" type="video/mp4"></video></div>
-        <h2 class="">Site and wordmark <span class="client">Le Ren, 2022</span></h2>
+        <div class="video-wrapper"> <video muted playsinline autoplay loop src="archive/game-over-optimized.mp4" type="video/mp4"></video></div>
+        <h2 class=""><a href="https://mikki-janower.github.io/supermariovoid/" target="_blank">Super Mario Void, </a>a nihilistic minigame <span class="client">2019</span></h2>
     </div>
     <div>
-        <img class="lozad" data-src="archive/Mikki_Delineator 7.jpg">
-        <h2>Delineator, an open-source pixel art tool <span class="client">2023</span></h2>
+        <div class="video-wrapper"><video class="lozad" muted playsinline autoplay loop data-src="archive/leren-homepage-optimized.mp4" type="video/mp4"></video></div>
+        <h2 class="">Site and wordmark <span class="client">Le Ren, 2022</span></h2>
     </div>
 </div>
 <!-----------------------reconna n reflections---------------------------->
 <div class="col123 diptych">
-    <div><img class="col23" src="archive/reconna-purplebg.png">
-        <h2 class="col23">Type design, Reconna Typeface <span class="client">2019</span></h2>
+    <div>
+        <img class="lozad" data-src="archive/transientgrounds.jpg">
+        <h2 class="">Identity for <a href="https://www.narsfoundation.org/2021_exhibitions/transient-grounds" target="_blank">Transient Grounds </a><span class="client">NARS Foundation, 2022</span></h2>
     </div>
-    <div> <img class="col23" src="archive/reflections-main.png">
-        <h2 class="col23">Reflections on Practice <span class="client">2020</span></h2>
+    <div> <img class="lozad" data-src="archive/reflections-main.png">
+        <h2 class="">Reflections on Practice <span class="client">2020</span></h2>
     </div>
 </div>
 
 <!---------------------Transient Grounds n cyberotica----------------------->
 <div class="col123 diptych">
-    <div>
-        <img class="lozad" data-src="archive/transientgrounds.jpg">
-        <h2 class="">Identity for <a href="https://www.narsfoundation.org/2021_exhibitions/transient-grounds" target="_blank">Transient Grounds </a><span class="client">NARS Foundation, 2022</span></h2>
+   <div><img class="lozad" data-src="archive/reconna-purplebg.png">
+        <h2 class="">Type design, Reconna Typeface <span class="client">2019</span></h2>
     </div>
     <div>
         <img class="lozad" data-src="zz old/cyberotica/jeong 1920.jpg">
