--- a/sampler.html
+++ b/sampler.html
@@ -152,6 +152,7 @@ textarea::placeholder{
   height:6px;
   width:100%;
   -webkit-appearance: none; /* Hides the slider so that custom slider can be made */
+  appearance:none;
 }
 input:hover, input:active, input:focus, td:hover, td:focus, table:focus{
   box-shadow:none;
@@ -167,6 +168,7 @@ input:focus::-webkit-slider-runnable-track {
 input:focus::-ms-fill-upper {
   box-shadow:none;
   -webkit-appearance:none;
+  appearance:none;
   outline:none;
 }
 .typetest input::-webkit-slider-thumb {
